fixed z-index in Header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,7 +11,7 @@
     padding: 0.5em;
     gap: 0.2em;
 
-
+z-index: 5;
 }
 
 .burger{
